force-app/main/default/objects/BGCK__Page__c/BGCK__Page__c.object-meta.xml
<CustomObject>
    <label>Page</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>