force-app/main/default/objects/BGCK__Page__c/fields/BGCK__Description__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>