force-app/main/default/objects/BGCK__Page__c/fields/BGCK__Historical__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical</label>
    <type>Checkbox</type>
</CustomField>