force-app/main/default/objects/BGCK__Page__c/fields/BGCK__Object_Value__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Object_Value__c</fullName>
    <label>Object Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>