force-app/main/default/objects/BGCK__Page__c/fields/BGCK__Order__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>