force-app/main/default/objects/BGCK__Page__c/fields/BGCK__Track_No__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Track_No__c</fullName>
    <externalId>true</externalId>
    <label>Tracking Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>