force-app/main/default/objects/BGCK__Page__c/fields/BGCK__Type__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Wizard</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Sub-Section</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>