force-app/main/default/objects/BGCK__Page__c/listViews/BGCK__All.listView-meta.xml
<ListView>
    <fullName>BGCK__All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>BGCK__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>